--- a/suruthika/mathapp/templates/mathapp/math.html
+++ b/suruthika/mathapp/templates/mathapp/math.html
@@ -30,11 +30,11 @@
             <h2 align="center">Calculation of Mileage</h2>
             <form method="post" align="center">
                 {% csrf_token %}
-                <label for="distance">Distance(in km)</label>
+                <label>Distance(in km)</label>
                 <input type="text" name="distance" value="{{ distance }}">
                 <br>
                 <br>
-                <label for="fuelconsumed">Fuel Consumed(in l)</label>
+                <label>Fuel Consumed(in l)</label>
                 <input type="text" name="fuelconsumed" value="{{ fuelconsumed }}">
                 <br>
                 <br>
@@ -42,7 +42,7 @@
                 <br>
                 <br>
             
-                <label for="mileage">Mileage(in km/l):</label>
+                <label>Mileage(in km/l):</label>
                 <input type="text" name="mileage" value="{{ mileage }}">
             </form>
         </div>
